Fixed align-items

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -464,6 +464,7 @@ height: 100%;
 #quotes-section {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 4.5rem;
 }
 
@@ -471,6 +472,7 @@ height: 100%;
   width:90%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 
